--- a/package.json
+++ b/package.json
@@ -1,34 +1,18 @@
 {
-  "name": "landgoldapp",
-  "version": "0.0.1",
-  "private": true,
+  "name": "landgold-mobile-app",
+  "version": "1.0.0",
+  "description": "LANDGOLD Blockchain Property Marketplace - Mobile Web App",
+  "main": "index.html",
   "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "test": "jest"
+    "start": "python server.py",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^7.8.11",
-    "@react-navigation/native": "^7.1.22",
-    "@react-navigation/stack": "^7.6.8",
-    "react": "^19.2.0",
-    "react-native": "^0.82.1",
-    "react-native-gesture-handler": "^2.29.1",
-    "react-native-reanimated": "^4.1.5",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0",
-    "react-native-vector-icons": "^10.3.0"
-  },
-  "description": "",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "@react-native-community/cli": "^20.0.2",
-    "@react-native/metro-config": "^0.82.1"
-  }
+  "keywords": [
+    "mobile",
+    "property",
+    "blockchain",
+    "landgold"
+  ],
+  "author": "LANDGOLD Team",
+  "license": "MIT"
 }
